--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
         <h2>Hello 👋</h2>
         <h1>Muhammad Raihan Syamaidzar</h1>
         <p>
-          I am <span class="typed-text"></span> <span class="cursor">&nbsp;</span>
+          I am <span class="typed-text">Unemployment</span> <span class="cursor">&nbsp;</span>
         </p>
       </div>
-      <div class="image">
-        <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri">
-      </div>
+        <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" class="image">
     </section>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
