--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
         <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" class="image">
     </section>
 
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
   </body>
 </html>
