Hover effect preparation

--- a/index.html
+++ b/index.html
@@ -33,8 +33,32 @@
       />
     </section>
 
-    <section class="contact"></section>
+    <section class="contact">
+      <div>
+        <i class="fa-brands fa-linkedin"></i>
+        <p>Muhammad Raihan Syamaidzar</p>
+      </div>
 
+      <div>
+        <i class="fa-brands fa-whatsapp"></i>
+        <p>0895342666561</p>
+      </div>
+
+      <div>
+        <i class="fa-brands fa-instagram"></i>
+        <p>mr_syamaidzar</p>
+      </div>
+
+      <div>
+        <i class="fa-regular fa-envelope"></i>
+        <p>muhammadraihansyamaidzar@gmail.com</p>
+      </div>
+    </section>
+
+    <script
+      src="https://kit.fontawesome.com/bb239bc160.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/main.js"></script>
   </body>
 </html>
