--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="opening">
+    <section id="opening">
       <video autoplay loop muted plays-inline class="back-video">
         <source src="assets/Background.mp4" />
       </video>
@@ -17,7 +17,7 @@
       </div>
     </section>
 
-    <section class="hero">
+    <section id="hero">
       <div class="intro">
         <h2>Hello 👋</h2>
         <h1>Muhammad Raihan Syamaidzar</h1>
@@ -26,32 +26,32 @@
           <span class="cursor">&nbsp;</span>
         </p>
       </div>
-      <img
-        src="assets/Muhammad Raihan Syamaidzar.png"
-        alt="Foto Diri"
-        class="image"
-      />
+      <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" />
     </section>
 
-    <section class="contact">
+    <section id="contact">
       <div>
-        <i class="fa-brands fa-linkedin"></i>
-        <p>Muhammad Raihan Syamaidzar</p>
+        <a href="" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
 
       <div>
-        <i class="fa-brands fa-whatsapp"></i>
-        <p>0895342666561</p>
+        <a href="" target="_blank" rel="noopener noreferrer"
+          ><i class="fa-brands fa-whatsapp"></i
+        ></a>
       </div>
 
       <div>
-        <i class="fa-brands fa-instagram"></i>
-        <p>mr_syamaidzar</p>
+        <a href="" target="_blank" rel="noopener noreferrer"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
       </div>
 
       <div>
-        <i class="fa-regular fa-envelope"></i>
-        <p>muhammadraihansyamaidzar@gmail.com</p>
+        <a href="" target="_blank" rel="noopener noreferrer"
+          ><i class="fa-regular fa-envelope"></i
+        ></a>
       </div>
     </section>
 
