Hard skil preparation

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" />
     </section>
 
+    <section id="hard-skill"></section>
+
     <section id="contact">
       <div>
         <a href="" target="_blank" rel="noopener noreferrer">
