--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- Navbar Start -->
+    
+    <!-- Navbar End -->
+
+    <!-- Opening Start -->
     <section id="opening">
       <video autoplay loop muted plays-inline class="back-video">
         <source src="assets/Background.mp4" />
@@ -16,7 +21,9 @@
         <h1>اَلسَّلَامُ عَلَيْكُمْ وَرَحْمَةُ اللهِ وَبَرَكَا تُهُ</h1>
       </div>
     </section>
+    <!-- Opening End -->
 
+    <!-- Hero Start -->
     <section id="hero">
       <div class="intro">
         <h2>Hello 👋</h2>
@@ -28,9 +35,13 @@
       </div>
       <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" />
     </section>
+    <!-- Hero End -->
 
+    <!-- Project Ide Start -->
     <section id="hard-skill"></section>
+    <!-- Project Ide End -->
 
+    <!-- Contact Start -->
     <section id="contact">
       <div>
         <a href="" target="_blank" rel="noopener noreferrer">
@@ -56,6 +67,7 @@
         ></a>
       </div>
     </section>
+    <!-- Contact End -->
 
     <script
       src="https://kit.fontawesome.com/bb239bc160.js"
