--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- Navbar Start -->
-    
+
     <!-- Navbar End -->
 
     <!-- Opening Start -->
@@ -50,21 +50,21 @@
       </div>
 
       <div>
-        <a href="" target="_blank" rel="noopener noreferrer"
-          ><i class="fa-brands fa-whatsapp"></i
-        ></a>
+        <a href="" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-github"></i>
+        </a>
       </div>
 
       <div>
-        <a href="" target="_blank" rel="noopener noreferrer"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
+        <a href="" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
       </div>
 
       <div>
-        <a href="" target="_blank" rel="noopener noreferrer"
-          ><i class="fa-regular fa-envelope"></i
-        ></a>
+        <a href="" target="_blank" rel="noopener noreferrer">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
       </div>
     </section>
     <!-- Contact End -->
