Edit Video and Add Project Idea

--- a/index.html
+++ b/index.html
@@ -38,7 +38,50 @@
     <!-- Hero End -->
 
     <!-- Project Ide Start -->
-    <section id="hard-skill"></section>
+    <section id="project">
+      <div class="wrapper">
+        <div class="box">
+          <h2>Hello, WOrld</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            dolores et vel totam magnam consectetur, possimus deserunt dicta
+            ullam facere consequatur reprehenderit! Sit vitae cum harum
+            voluptatum possimus praesentium a?
+          </p>
+          <img src="assets/Hello, world.webp" alt="Template">
+        </div>
+        <div class="box">
+          <h2>Hello, WOrld</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            dolores et vel totam magnam consectetur, possimus deserunt dicta
+            ullam facere consequatur reprehenderit! Sit vitae cum harum
+            voluptatum possimus praesentium a?
+          </p>
+          <img src="assets/Hello, world.webp" alt="Template">
+        </div>
+        <div class="box">
+          <h2>Hello, WOrld</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            dolores et vel totam magnam consectetur, possimus deserunt dicta
+            ullam facere consequatur reprehenderit! Sit vitae cum harum
+            voluptatum possimus praesentium a?
+          </p>
+          <img src="assets/Hello, world.webp" alt="Template">
+        </div>
+        <div class="box">
+          <h2>Hello, WOrld</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            dolores et vel totam magnam consectetur, possimus deserunt dicta
+            ullam facere consequatur reprehenderit! Sit vitae cum harum
+            voluptatum possimus praesentium a?
+          </p>
+          <img src="assets/Hello, world.webp" alt="Template">
+        </div>
+      </div>
+    </section>
     <!-- Project Ide End -->
 
     <!-- Contact Start -->
