--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Opening Start -->
     <section id="opening">
       <video autoplay loop muted plays-inline class="back-video">
-        <source src="assets/Background.mp4" />
+        <source src="assets/Backgorund.mp4" />
       </video>
 
       <div class="content">
@@ -48,7 +48,7 @@
             ullam facere consequatur reprehenderit! Sit vitae cum harum
             voluptatum possimus praesentium a?
           </p>
-          <img src="assets/Hello, world.webp" alt="Template">
+          <img src="assets/Hello, world.webp" alt="Template" />
         </div>
         <div class="box">
           <h2>Hello, WOrld</h2>
@@ -58,7 +58,7 @@
             ullam facere consequatur reprehenderit! Sit vitae cum harum
             voluptatum possimus praesentium a?
           </p>
-          <img src="assets/Hello, world.webp" alt="Template">
+          <img src="assets/Hello, world.webp" alt="Template" />
         </div>
         <div class="box">
           <h2>Hello, WOrld</h2>
@@ -68,7 +68,7 @@
             ullam facere consequatur reprehenderit! Sit vitae cum harum
             voluptatum possimus praesentium a?
           </p>
-          <img src="assets/Hello, world.webp" alt="Template">
+          <img src="assets/Hello, world.webp" alt="Template" />
         </div>
         <div class="box">
           <h2>Hello, WOrld</h2>
@@ -78,7 +78,7 @@
             ullam facere consequatur reprehenderit! Sit vitae cum harum
             voluptatum possimus praesentium a?
           </p>
-          <img src="assets/Hello, world.webp" alt="Template">
+          <img src="assets/Hello, world.webp" alt="Template" />
         </div>
       </div>
     </section>
