--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <!-- Navbar Start -->
-
+    <nav>
+      
+    </nav>
     <!-- Navbar End -->
 
     <!-- Opening Start -->
