--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
   </head>
   <body>
     <!-- Navbar Start -->
-    <nav>
-      
+    <nav id="nav">
+      <ul>
+        <li><a href="#hero"></a>Portofolio</li>
+        <li><a href="#project"></a>Projetcs</li>
+        <li><a href="#contact"></a>Contacts</li>
+      </ul>
+
+      <button class="icon" id="toggle">
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+      </button>
     </nav>
     <!-- Navbar End -->
 
