Add image project idea

--- a/index.html
+++ b/index.html
@@ -50,46 +50,23 @@
 
     <!-- Project Ide Start -->
     <section id="project">
+      <h1>Project Idea</h1>
       <div class="wrapper">
         <div class="box">
-          <h2>Hello, WOrld</h2>
+          <h2>iMusic</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-            dolores et vel totam magnam consectetur, possimus deserunt dicta
-            ullam facere consequatur reprehenderit! Sit vitae cum harum
-            voluptatum possimus praesentium a?
+            Project tentang music palyer yang mirip dengan Spotify yang mana
+            tersedia berbagai fitur seperti halaman register, play music, dll
           </p>
-          <img src="assets/Hello, world.webp" alt="Template" />
+          <img src="assets/iMusic.png" alt="Template" />
         </div>
         <div class="box">
-          <h2>Hello, WOrld</h2>
+          <h2>Sanke game</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-            dolores et vel totam magnam consectetur, possimus deserunt dicta
-            ullam facere consequatur reprehenderit! Sit vitae cum harum
-            voluptatum possimus praesentium a?
+            Project berbasis c++ yang mana user dapat bermain snake game seperti
+            di hp jadul. Project ini menggunakan library Raylib
           </p>
-          <img src="assets/Hello, world.webp" alt="Template" />
-        </div>
-        <div class="box">
-          <h2>Hello, WOrld</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-            dolores et vel totam magnam consectetur, possimus deserunt dicta
-            ullam facere consequatur reprehenderit! Sit vitae cum harum
-            voluptatum possimus praesentium a?
-          </p>
-          <img src="assets/Hello, world.webp" alt="Template" />
-        </div>
-        <div class="box">
-          <h2>Hello, WOrld</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-            dolores et vel totam magnam consectetur, possimus deserunt dicta
-            ullam facere consequatur reprehenderit! Sit vitae cum harum
-            voluptatum possimus praesentium a?
-          </p>
-          <img src="assets/Hello, world.webp" alt="Template" />
+          <img src="assets/Snakegame.jpg" alt="Raylib" />
         </div>
       </div>
     </section>
