Connect to each section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Navbar Start -->
     <nav id="nav">
       <ul>
-        <li><a href="#hero"></a>Portofolio</li>
-        <li><a href="#project"></a>Projetcs</li>
-        <li><a href="#contact"></a>Contacts</li>
+        <li><a href="#hero">Portofolio</a></li>
+        <li><a href="#project">Projetcs</a></li>
+        <li><a href="#contact">Contacts</a></li>
       </ul>
 
       <button class="icon" id="toggle">
