Add animation scroll

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Opening End -->
 
     <!-- Hero Start -->
-    <section id="hero">
+    <section id="hero" class="hidden">
       <div class="intro">
         <h2>Hello 👋</h2>
         <h1>Muhammad Raihan Syamaidzar</h1>
@@ -49,10 +49,10 @@
     <!-- Hero End -->
 
     <!-- Project Ide Start -->
-    <section id="project">
+    <section id="project" class="hidden">
       <h1>Project Idea</h1>
       <div class="wrapper">
-        <div class="box">
+        <div class="box hidden">
           <h2>iMusic</h2>
           <p>
             Project tentang music palyer yang mirip dengan Spotify yang mana
@@ -60,7 +60,7 @@
           </p>
           <img src="assets/iMusic.png" alt="Template" />
         </div>
-        <div class="box">
+        <div class="box hidden">
           <h2>Sanke game</h2>
           <p>
             Project berbasis c++ yang mana user dapat bermain snake game seperti
@@ -73,26 +73,26 @@
     <!-- Project Ide End -->
 
     <!-- Contact Start -->
-    <section id="contact">
-      <div>
+    <section id="contact" class="hidden">
+      <div class="logo hidden">
         <a href="" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
 
-      <div>
+      <div class="logo hidden">
         <a href="" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
 
-      <div>
+      <div class="logo hidden">
         <a href="" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-instagram"></i>
         </a>
       </div>
 
-      <div>
+      <div class="logo hidden">
         <a href="" target="_blank" rel="noopener noreferrer">
           <i class="fa-regular fa-envelope"></i>
         </a>
