Add card effect

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
           <span class="cursor">&nbsp;</span>
         </p>
       </div>
-      <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" />
+
+      <div class="card">
+        <div class="imgBox">
+          <img src="assets/Muhammad Raihan Syamaidzar.png" alt="Foto Diri" />
+        </div>
+
+        <article class="details">Muhammad Raihan Syamaidzar</article>
+      </div>
     </section>
     <!-- Hero End -->
 
