Add link Linkedin and Github

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
     <!-- Contact Start -->
     <section id="contact" class="hidden">
       <div class="logo hidden">
-        <a href="" target="_blank" rel="noopener noreferrer">
+        <a href="www.linkedin.com/in/muhammad-raihan-syamaidzar-aa1093307" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
 
       <div class="logo hidden">
-        <a href="" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/Mr-SyamaIdzar" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
