index: change link

--- a/index.html
+++ b/index.html
@@ -82,13 +82,21 @@
     <!-- Contact Start -->
     <section id="contact" class="hidden">
       <div class="logo hidden">
-        <a href="www.linkedin.com/in/muhammad-raihan-syamaidzar-aa1093307" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://www.linkedin.com/in/muhammadraihans/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
       </div>
 
       <div class="logo hidden">
-        <a href="https://github.com/Mr-SyamaIdzar" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://github.com/Mr-SyamaIdzar"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fa-brands fa-github"></i>
         </a>
       </div>
@@ -100,7 +108,11 @@
       </div>
 
       <div class="logo hidden">
-        <a href="" target="_blank" rel="noopener noreferrer">
+        <a
+          href="https://mail.google.com/mail/u/0/?view=cm&tf=1&fs=1&to=muhammadraihansyamaidzar@gmail.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="fa-regular fa-envelope"></i>
         </a>
       </div>
